--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferendis dolorum numquam minus. </p>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
                     <button class="btn">Order Now</button>
+                    <button class="btn">Add to cart</button>
                 </section>
             </div>
         </header>
